Making WAS test web application

--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -41,3 +41,131 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 ![Eclipse:Dynamic Web Project]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/3.PNG)
 
 
+아래는 test.jsp 코드이다.
+
+```
+<%@ page language="java" contentType="text/html; charset=EUC-KR"
+	pageEncoding="EUC-KR"%>
+<%@ page import="java.net.*, java.io.*, java.util.*, java.text.*"%>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+<title>WAS TEST PAGE</title>
+</head>
+<body>
+	<%
+		// page name
+		out.println(":: WAS TEST PAGE ::");
+		out.println("<br><br>");
+
+		InetAddress Address = InetAddress.getLocalHost();
+		// ip
+		String ipaddr = Address.getHostAddress();
+		out.println("IP: " + ipaddr);
+		out.println("<br>");
+		// host name
+		String hostname = Address.getHostName();
+		out.println("Host Name: " + hostname);
+		out.println("<br><br>");
+
+		URL url = application.getResource("/test.jsp");
+		// jsp path
+		String jsppath = url.getPath();
+		out.println("JSP Path: " + jsppath);
+		out.println("<br>");
+		// WAS info
+		String wasinfo = application.getServerInfo();
+		out.println("WAS: " + wasinfo);
+		out.println("<br>");
+		// servlet,jsp version
+		String jspv = application.getMajorVersion() + "." + application.getMinorVersion();
+		out.println("Servlet/JSP version: " + jspv);
+		out.println("<br><br>");
+
+		// date,time
+		SimpleDateFormat dtformat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+		String datetime = dtformat.format(new java.util.Date());
+		out.println("Current System Time: " + datetime);
+	%>
+</body>
+</html>
+```
+
+
+![test.jsp view]()
+
+아래는 보기 편하게 하기 위해서 table을 입힌 코드이다.
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=EUC-KR"
+	pageEncoding="EUC-KR"%>
+<%@ page import="java.net.*, java.io.*, java.util.*, java.text.*"%>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+<title>WAS TEST PAGE</title>
+</head>
+<body>
+	<%
+		// page name
+		out.println(":: WAS TEST PAGE ::");
+		out.println("<br>");
+		
+		out.println("<table border=\"0\" cellpadding=\"2\"");
+		InetAddress Address = InetAddress.getLocalHost();
+		// ip
+		String ipaddr = Address.getHostAddress();
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#F8E0E6\">IP</td>");
+		out.println("<td>" + ipaddr + "</td>");
+		out.println("</tr>");
+		// host name
+		String hostname = Address.getHostName();
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#F8E0E6\">Host Name</td>");
+		out.println("<td>" + hostname + "</td>");
+		out.println("</tr>");
+		out.println("</tables>");
+		out.println("<br>");
+		
+		out.println("<table border=\"0\" cellpadding=\"2\"");
+		URL url = application.getResource("/test.jsp");
+		// jsp path
+		String jsppath = url.getPath();
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#F2E0F7\">JSP Path</td>");
+		out.println("<td>" + jsppath + "</td>");
+		out.println("</tr>");
+		// WAS info
+		String wasinfo = application.getServerInfo();
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#F2E0F7\">WAS</td>");
+		out.println("<td>" + wasinfo + "</td>");
+		out.println("</tr>");
+		// servlet,jsp version
+		String jspv = application.getMajorVersion() + "." + application.getMinorVersion();
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#F2E0F7\">Servlet/JSP version</td>");
+		out.println("<td>" + jspv + "</td>");
+		out.println("</tr>");
+		out.println("</tables>");
+		out.println("<br>");
+		
+		out.println("<table border=\"0\" cellpadding=\"2\"");
+		// date,time
+		SimpleDateFormat dtformat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+		String datetime = dtformat.format(new java.util.Date());
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#E0F2F7\">Current DateTime</td>");
+		out.println("<td>" + datetime + "</td>");
+		out.println("</tr>");
+		out.println("</tables>");
+		out.println("<br>");
+	%>
+</body>
+</html>
+```
+
+이후 편의를 위해 WebContent 안에 있던 
