Making WAS test web application

--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -43,7 +43,7 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 
 아래는 test.jsp 코드이다.
 
-```
+```jsp
 <%@ page language="java" contentType="text/html; charset=EUC-KR"
 	pageEncoding="EUC-KR"%>
 <%@ page import="java.net.*, java.io.*, java.util.*, java.text.*"%>
