Making WAS test web application

--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -93,7 +93,8 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 ```
 
 
-![test.jsp view]()
+![test.jsp view]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/4.PNG)
+
 
 아래는 보기 편하게 하기 위해서 table을 입힌 코드이다.
 
@@ -168,4 +169,6 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 </html>
 ```
 
-이후 편의를 위해 WebContent 안에 있던 
+
+![test.jsp tableversion view]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/5.PNG)
+
