--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -13,6 +13,9 @@ comments: true
 share: true
 ---
 
+WAS 제품을 설치 후, 또는 Web Server 제품까지 설치하고 연동시킨 후 그 결과를 확인하기 위해 테스트용 웹 어플리케이션이 필요하다.
+
+
 IDE: Eclipse
 
 
@@ -171,4 +174,8 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 
 
 ![test.jsp tableversion view]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/5.PNG)
+
+
+이제 WEB-INF에 web.xml까지 생성해주면 완성이다.
+
 
