Making web application sample for WAS

--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -91,6 +91,8 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 		SimpleDateFormat dtformat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
 		String datetime = dtformat.format(new java.util.Date());
 		out.println("Current System Time: " + datetime);
+		// session id
+		out.println("Session ID: " + session.getId());
 	%>
 </body>
 </html>
@@ -165,6 +167,11 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 		out.println("<tr>");
 		out.println("<td bgcolor=\"#E0F2F7\">Current DateTime</td>");
 		out.println("<td>" + datetime + "</td>");
+		out.println("</tr>");
+		// session id
+		out.println("<tr>");
+		out.println("<td bgcolor=\"#E0F2F7\">Session ID</td>");
+		out.println("<td>" + session.getId() + "</td>");
 		out.println("</tr>");
 		out.println("</tables>");
 		out.println("<br>");
