--- a/_posts/2019-11-19-Windows-10에서-JEUS7-설치하기.md
+++ b/_posts/2019-11-19-Windows-10에서-JEUS7-설치하기.md
@@ -5,10 +5,10 @@ description:
 date: 2019-11-19 12:00:00 -0400
 # modified: 
 tags: 
-- WAS
-- JEUS7
-- Tmax
-- Middleware
+- was
+- jeus7
+- tmax
+- middleware
 comments: true
 share: true
 ---
