--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -5,10 +5,10 @@ description:
 date: 2019-11-19 16:00:00 -0400
 modified: 2019-12-13 09:19:2030 -0400
 tags: 
-- WAS
-- Middleware
-- Java
-- JSP
+- was
+- middleware
+- java
+- jsp
 comments: true
 share: true
 ---
