JVM/GC best posts

--- a/_posts/2020-03-03-JVM-GC.md
+++ b/_posts/2020-03-03-JVM-GC.md
@@ -14,8 +14,10 @@ share: true
 ---
 
 
-여기 글이 제일 이해하기 좋았다.
+JVM/GC 글 모음
 
-[https://perfectacle.github.io/2019/05/07/jvm-gc-basic/](https://perfectacle.github.io/2019/05/07/jvm-gc-basic/)
+[(JVM) Garbage Collection Basic](https://perfectacle.github.io/2019/05/07/jvm-gc-basic/)
 
-[https://perfectacle.github.io/2019/05/11/jvm-gc-advanced/](https://perfectacle.github.io/2019/05/11/jvm-gc-advanced/)
+[(JVM) Garbage Collection Advanced](https://perfectacle.github.io/2019/05/11/jvm-gc-advanced/)
+
+[Java Garbage Collection](https://d2.naver.com/helloworld/1329)
