Install Jeus7 in windows10

--- a/_posts/2019-11-19-Windows-10에서-JEUS7-설치하기.md
+++ b/_posts/2019-11-19-Windows-10에서-JEUS7-설치하기.md
@@ -14,6 +14,8 @@ comments: true
 share: true
 ---
 
+# 설치
+
 JEUS7을 다운로드 받기 위해 Tmax technet에 접속한다.
 
 [Tmax_Technet](https://technet.tmaxsoft.com/ko/front/main/main.do)
@@ -86,3 +88,37 @@ Summary를 확인한 후 Install을 진행한다.
 
 
 [작성중]
+
+# 서버 설정 커스터마이징
+
+각종 설정을 변경할 수 있는 경로이다.
+
+| index | path |
+| ----- | ---- |
+| 로그 위치 | |
+| Node Manager | |
+| Domain | |
+| Administrator | |
+| 보안 설정 | |
+
+## 로그 위치 바꾸기
+
+## Node Manager 설정 바꾸기
+
+## Domain 설정 바꾸기
+
+## administrator 이름 바꾸기
+
+## 보안 설정 바꾸기
+
+
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
+![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
