add server setting

--- a/_posts/2019-11-19-Windows-10에서-JEUS7-설치하기.md
+++ b/_posts/2019-11-19-Windows-10에서-JEUS7-설치하기.md
@@ -87,30 +87,76 @@ Summary를 확인한 후 Install을 진행한다.
 ![JEUS7 download]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/14.PNG)
 
 
-[작성중]
 
 # 서버 설정 커스터마이징
 
-각종 설정을 변경할 수 있는 경로이다.
-
-| index | path |
-| ----- | ---- |
-| 로그 위치 | |
-| Node Manager | |
-| Domain | |
-| Administrator | |
-| 보안 설정 | |
-
-## 로그 위치 바꾸기
-
-## Node Manager 설정 바꾸기
 
 ## Domain 설정 바꾸기
 
+`%JEUS_HOME%\domains\[Domain name]\config\domain.xml`
+
+초기에 webadmin 포트를 default포트가 아닌 값으로 변경하고자 할때 설정한다.
+
+xml파일 내에서 다음과 같은 부분을 찾아보자.
+
+```xml
+<server>
+	<name>adminServer</name>
+	...
+	<base>BASE</base>
+	...
+	<listen-port>9736</listen-port>
+</server>
+```
+
+listen-port를 바꿔주면 변경된다.
+
+## JEUS launcher 로그 경로
+
+`%JEUS_HOME%/bin/jeus.properties.cmd`에 SET 	JAVA_ARGS 값을 변경한다.
+
+[예시 추가]
+
+## 패스워드를 드러내지 않는 자동로그인을 위한 설정
+
+1. `%JEUS_HOME%/bin/`에 `jeusEncode`를 생성한다.
+
+2. cmd에서 아래와 같이 실행한다.
+
+webadmin 접속 기본포트를 변경했다면 유의해서 작성한다.
+
+```
+cd %JEUS_HOME%\bin
+encryprion AES "[id]:[password]"
+```
+
+3. 생성한 jeusEncode에 다음과 같이 작성한다.
+
+```
+[domain name]:adminServer [2의 결과물]
+%COMPUTERNAME%:[9736 또는 변경한 listen-port] [2의 결과물]
+```
+
+[작성중]
+
+<!--
+## Node Manager 설정 바꾸기
+
+`%JEUS_HOME%\nodemanager\jeusnm.xml`
+
+Node Manager 포트 변경, 전용 로그파일 경로 등을 변경할 수 있다.
+
+
+
+
 ## administrator 이름 바꾸기
+
+
 
 ## 보안 설정 바꾸기
 
+## 기타 로그 위치 바꾸기
+
 
 ![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
 ![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/10.PNG)
@@ -122,3 +168,4 @@ Summary를 확인한 후 Install을 진행한다.
 ![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
 ![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
 ![]({{site.url}}{{site.baseurl}}/assets/images/2019-11-19-Windows10-JEUS7/20.PNG)
+-->
