image url change (not use {{site.url}}{{site.baseurl}})

--- a/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
+++ b/_posts/2019-11-20-WAS-테스트용-웹-어플리케이션-만들기.md
@@ -22,17 +22,17 @@ IDE: Eclipse
 
 Dynamic Web Project로 생성한다.
 
-![Eclipse:Dynamic Web Project]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/0.PNG)
+![Eclipse:Dynamic Web Project](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/0.PNG)
 
 
 프로젝트 이름을 설정하고 Finish
 
-![Eclipse:Dynamic Web Project]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/1.PNG)
+![Eclipse:Dynamic Web Project](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/1.PNG)
 
 
 jsp파일을 WebContent 안에 새로 만들어 준다.
 
-![Eclipse:Dynamic Web Project]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/2.PNG)
+![Eclipse:Dynamic Web Project](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/2.PNG)
 
 
 만약 tomcat이 연결되어 있지 않으면 첫줄부터
@@ -42,7 +42,7 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 같은 오류가 뜬다. 먼저 [톰캣 페이지](https://tomcat.apache.org/download-80.cgi)에서 톰캣을 설치한다.
 이후 이클립스에서 프로젝트 우클릭 -> Properties를 선택하고 아래 캡쳐에서 톰캣을 추가해 준다.
 
-![Eclipse:Dynamic Web Project]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/3.PNG)
+![Eclipse:Dynamic Web Project](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/3.PNG)
 
 
 아래는 test.jsp 코드이다.
@@ -100,7 +100,7 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 ```
 
 
-![test.jsp view]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/4.PNG)
+![test.jsp view](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/4.PNG)
 
 
 아래는 보기 편하게 하기 위해서 table을 입힌 코드이다.
@@ -182,17 +182,17 @@ The superclass "javax.servlet.http.HttpServlet" was not found on the Java Build 
 ```
 
 
-![test.jsp tableversion view]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/5.PNG)
+![test.jsp tableversion view](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/5.PNG)
 
 
 이제 WEB-INF에 web.xml까지 생성해주면 완성이다.
 프로젝트를 우클릭하고 아래와 같이 만들어 줄 수 있다.
 
-![make web.xml]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/6.PNG)
+![make web.xml](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/6.PNG)
 
 기본적으로 생성되는 web.xml이다.
 
-![web.xml]({{site.url}}{{site.baseurl}}/assets/images/2019-11-20-WAS-test-web-application/7.PNG)
+![web.xml](https://s01va.github.io/assets/images/2019-11-20-WAS-test-web-application/7.PNG)
 
 이를 webtest에 알맞게 수정해준다.
 
