--- a/_posts/2021-11-24-Node.js로-개발-중-주요-사용-커맨드-목록.md
+++ b/_posts/2021-11-24-Node.js로-개발-중-주요-사용-커맨드-목록.md
@@ -17,11 +17,7 @@ toc_sticky: true
 
 다음 상황들을 전제합니다.
 
-
-
-
-
-개인적으로 node.js를 사용하여 웹 생성 시 루틴화된 과정입니다.
+개인적으로 node.js를 사용하여 웹 생성 시 루틴화된 과정을 정리하였습니다.
 
 다음 상황들을 전제합니다.
 
@@ -130,8 +126,6 @@ node.js 프로젝트의 루트 디렉토리에 있다고 가정
      ```bash
      npm install dotenv
      ```
-
-     
 
    - javascript로 변경한 설정파일
 
